# operator-console

./: Cargo.toml  README.md  deny.toml
docs/: matchbook-owls-audit-log.md
docs/plans/: 2026-03-25-recorder-resource-state-hardening.md  async-runtime-shared-data-layer-discovery.md  async-runtime-shared-data-layer-plan.md
fixtures/: exchange_panel_snapshot.json  smarkets-account.json  smarkets-open-bets.json  smarkets-open-positions.json
fixtures/worker/: load_dashboard_request_template.json  (+2 more)
src/: app.rs  app_state.rs  backend_provider.rs  bet_recorder_provider.rs  calculator.rs  codemap.md  domain.rs  exchange_api.rs  execution_backend.rs  horse_matcher.rs  lib.rs  main.rs  manual_positions.rs  matchbook_backend.rs  native_provider.rs  oddsmatcher.rs  owls.rs  provider.rs  recorder.rs  runtime.rs  snapshot_projection.rs  stub_provider.rs  theme.rs  tracing_setup.rs  trading_actions.rs  transport.rs  ui.rs  wm.rs  worker_client.rs
tests/: app_state.rs  async_resource_state.rs  bet_recorder_exchange_provider.rs  bet_recorder_provider.rs  calculator_panel.rs  cli_smoke.rs  exchange_provider_contract.rs  exchanges_panel.rs  help_footer.rs  horse_matcher_panel.rs  live_operator_smoke.rs  native_provider.rs  navigation.rs  oddsmatcher_panel.rs  operator_workflows.rs  persistent_worker_client.rs  provider_contract.rs  recorder_config_persistence.rs  recorder_controls.rs  recorder_process_supervisor.rs  recorder_startup_retry.rs  tracing_init.rs  trading_panel_ui.rs  worker_backed_provider.rs  worker_client.rs  worker_client_stdio.rs  worker_failure_ui.rs
(+18 files in other folders)
