[package]
name = "operator-console"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rust_socketio = { version = "0.6", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tui-big-text = "0.8.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
